--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,8 @@ header{
 
 .bookform-widget-embedded__wrapper{
   height: 39vw!important;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .header-carousel-item-title{
@@ -388,7 +390,7 @@ header{
 
 .booking-body{
   margin: 0 auto;
-  width: 70%;
+  width: 100%;
   height: 39vw;
 }
 
@@ -930,7 +932,7 @@ header{
   }
 
   .booking-body{
-    width: 90%;
+    width: 100%;
     height: 100vw;
     margin-top: 8vw;
   }
