--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{background-color: rgba(0,0,0,.98);}
+body{background-color: rgba(0,0,0,1)!important;}
 
 header{
   padding-bottom: 10px;
@@ -362,6 +362,7 @@ header{
 }
 
 .booking-header-inner{
+  text-align: center;
   width: 75%;
   margin: 0 auto;
   height: 15vw;
@@ -390,6 +391,7 @@ header{
 }
 
 .booking-body{
+  background-color: #18181d;
   margin: 0 auto;
   width: 100%;
   height: 39vw;
@@ -1301,5 +1303,10 @@ header{
   .more-views .view-mobile-btn{
     font-size: 1vw;
     width: 80%;
+  }
+
+  .about-right-column iframe{
+    width: 100%!important;
+    height: 40%!important;
   }
 }
