--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,75 @@
 body{background-color: rgba(0,0,0,1)!important;}
 
+@font-face{
+  font-family: 'BebasBook';
+  src: url('../fonts/BEBASBOOK_0.TTF');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face{
+  font-family: 'BebasBold';
+  src: url('../fonts/BEBASBOLD_0.TTF');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face{
+  font-family: 'MontSerratRegular';
+  src: url('../fonts/MONTSERRAT-REGULAR.TTF');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face{
+  font-family: 'BebasThin';
+  src: url('../fonts/BEBASTHIN_0.TTF');
+  font-weight: normal;
+  font-style: normal;
+}
+
 header{
   padding-bottom: 8vw;
   position: relative;
+}
+
+.left-indicator{
+  position: fixed;
+  z-index: 500;
+  height: 100vh;
+  width: 10vw;
+}
+
+.left-indicator .active{
+  color: #fff;
+}
+
+.active:before, .active:after {
+  content: "";
+  display: inline-block;
+  width: 50%;
+  margin: -0.1vw 2vw 0 -50%;
+  vertical-align: middle;
+  border-bottom: 0.1vw solid #fff;
+}
+
+.active:after{
+  margin: -0.1vw -50% 0 2vw;
+}
+
+.left-indicator ul{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  color: rgba(255,255,255,.5);
+  font-size: 1vw;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.left-indicator li{
+  margin: 3vw 0;
 }
 
 .video-container{
@@ -203,6 +270,29 @@ header{
   padding-bottom: 1.5vw;
 }
 
+.about-layout{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.about-layout span{
+  font-family: BebasBold;
+  font-size: 23vw;
+  opacity: .3;
+}
+
+.about-layout .top{
+  position: relative;
+  left: -6vw;
+}
+
+.about-layout .bottom{
+  position: relative;
+  top: 30vw;
+  right: -23vw;
+}
+
 .view-mobile{
   padding-bottom: 4vw;
   margin-top: -2vw;
@@ -248,8 +338,9 @@ header{
   width: 25%;
 }
 
-.about-text-description{
-  font-size: 0.75vw;
+.about-text-description {
+  font-size: 0.80vw;
+  margin-top: 0.5vw;
   text-transform: uppercase;
   color: rgba(255,255,255,.7);
   font-weight: bold;
@@ -365,36 +456,42 @@ header{
   padding: 0;
   margin: 0;
   margin-top: -8vw;
-  background-color: rgba(255,0,0,.1);
+  background: url('../sources/booking_bg.jpg');
+  background-size: cover;
+}
+
+.booking-layout{
+  width: 100%;
+  position: absolute;
+  height: 15vw;
+  background-color: #000;
+  opacity: .7;
 }
 
 .booking-header-inner{
-  text-align: center;
-  width: 75%;
+  text-align: left;
+  width: 70%;
   margin: 0 auto;
   height: 15vw;
 }
 
 .booking-header-inner-title{
-  transform: scale(1,1.4);
-  -webkit-transform:scale(1,1.4);
   text-transform: uppercase;
-  font-weight: bolder;
+  font-family: BebasBook;
   color: #fff;
-  font-size: 3.2vw;
+  font-size: 6vw;
   display: block;
   padding-top: 2vw;
 }
 
 .booking-header-inner-description{
-  transform: scale(1,1.4);
-  -webkit-transform:scale(1,1.4);
+  font-family: BebasBold;
   text-transform: uppercase;
   font-weight: bolder;
   color: #fff;
-  font-size: 0.7vw;
+  margin-top: -1vw;
+  font-size: 1.2vw;
   display: block;
-  margin-top: 2vw;
 }
 
 .booking-body{
@@ -435,13 +532,12 @@ header{
 
 .more-info-title{
   text-transform: uppercase;
-  font-size: 1.9vw;
+  font-family: BebasBook;
+  font-size: 3vw;
   color: #fff;
   display: block;
   margin-top: 2.5vw;
   line-height: 3vw;
-  transform: scale(1,1.4);
-  -webkit-transform:scale(1,1.4);
 }
 
 .cta-more-info{
@@ -449,20 +545,44 @@ header{
 }
 
 .more-info-title b{
-  font-size: 2.4vw;
+  font-size: 3vw;
+}
+
+.restrictions-layout{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-family: BebasBold;
+  font-size: 25vw;
+  opacity: .3;
+}
+
+.restrictions-layout .top{
+  position: absolute;
+  top: -6vw;
+  right: 0;
+}
+
+.restrictions-layout .bottom{
+  position: relative;
+  top: 18vw;
+  left: -2vw;
 }
 
 .restrictions-title{
   text-transform: uppercase;
   color: #fff;
+  font-family: BebasThin;
   text-align: center;
-  font-size: 1.5vw;
+  font-size: 3vw;
   font-weight: 200;
   display: block;
   margin: 0 auto;
   margin-top: 2vw;
-  transform: scale(1,1.4);
-  -webkit-transform:scale(1,1.4);
+}
+
+.restrictions-title b{
+  font-family: BebasBold;
 }
 
 .restrictions-description{
@@ -511,9 +631,10 @@ header{
 .restrictions-column-description{
   color: #fff;
   font-size: 1vw;
+  font-family: MontSerratRegular;
   font-weight: bold;
   display: block;
-  margin-top: 1.5vw;
+  margin-top: .5vw;
   margin-left: 1.5vw;
 }
 
@@ -619,28 +740,29 @@ header{
 
 .reviews-title{
   text-align: center;
+  font-family: BebasThin;
   color: #fff;
   text-transform: uppercase;
-  font-size: 2vw;
+  font-size: 3vw;
   font-weight: 300;
   display: block;
   margin: 0 auto;
   padding-top: 5vw;
-  transform: scale(1,1.4);
-  -webkit-transform:scale(1,1.4);
+}
+
+.reviews-title b{
+  font-family: BebasBold;
 }
 
 .reviews-description{
   text-align: center;
   color: #fff;
   text-transform: uppercase;
-  font-size: 1vw;
+  font-size: 1.5vw;
   font-weight: bold;
   display: block;
   margin: 0 auto;
-  margin-top: 1.5vw;
-  transform: scale(1,1.4);
-  -webkit-transform:scale(1,1.4);
+  font-family: BebasBold;
 }
 
 .contact-us .control{
@@ -722,7 +844,7 @@ header{
 
 .footer
 {
-  background-color: #111;
+  background: linear-gradient(90deg, #4d0c0e, #111 60%);
 }
 
 .footer .right{
@@ -795,6 +917,8 @@ header{
   .bookform-widget-embedded__wrapper{
     height: 97vw!important;
     margin-top: 0.15vw;
+    width: 75%!important;
+    float: left!important;
   }
 
   .cta-header{
@@ -935,15 +1059,13 @@ header{
   }
 
   .booking-header-inner-title-mobile{
-    transform: scale(1,1.4);
-    -webkit-transform:scale(1,1.4);
+    font-family: BebasBook;
     text-transform: uppercase;
     font-weight: bolder;
     color: #fff;
-    font-size: 7vw;
+    font-size: 8vw;
     text-align: center;
     display: block;
-    padding-top: 2vw;
   }
 
   .booking-body{
@@ -961,9 +1083,9 @@ header{
     transform: rotate(55deg);
   }
   .more-info{
-    margin: -0.7vw!important;
     height: 100%;
     padding-bottom: 4vw;
+    text-align: center;
   }
 
   .more-info-title{
@@ -1001,13 +1123,10 @@ header{
     color: #fff;
     text-align: center;
     text-transform: uppercase;
-    font-size: 4.5vw;
-    font-weight: bold;
+    font-size: 8vw;
+    font-family: BebasBook;
     display: block;
     margin: 0 auto;
-    transform: scale(1,1.4);
-    -webkit-transform:scale(1,1.4);
-    margin-top: 2vw;
     padding-bottom: 3vw;
   }
 
@@ -1025,6 +1144,7 @@ header{
 
   .restrictions-column-description-mobile{
     color: #fff;
+    font-family: MontSerratRegular;
     font-weight: bold;
     font-size: 3vw;
     display: block;
@@ -1244,6 +1364,7 @@ header{
     display: block;
     width: 80%;
     margin: 2vw auto;
+    margin-top: 0;
     padding-bottom: 2vw;
   }
 
@@ -1320,5 +1441,6 @@ header{
   .about-right-column iframe{
     width: 100%!important;
     height: 40%!important;
+    padding-bottom: 4vw;
   }
 }
