--- a/css/style.css
+++ b/css/style.css
@@ -1058,8 +1058,15 @@ header{
   }
 
   .booking{
-    background: none;
+    background-size: cover;
+      height: 30vw;
+      margin-top: -10vw;
+      padding: 5vw;
   }
+    .booking-layout{
+        height: 3z0vw;
+        margin: -5vw 0 0 -5vw;
+    }
 
   .booking-header-inner{
     width: 90%;
@@ -1078,7 +1085,6 @@ header{
   .booking-body{
     width: 100%;
     height: 153vw;
-    margin-top: 8vw;
   }
 
   .booking-body span{
