--- a/css/style.css
+++ b/css/style.css
@@ -1059,12 +1059,13 @@ header{
 
   .booking{
     background-size: cover;
+    background-position: center;
       height: 30vw;
       margin-top: -10vw;
       padding: 5vw;
   }
     .booking-layout{
-        height: 3z0vw;
+        height: 30vw;
         margin: -5vw 0 0 -5vw;
     }
 
