--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,14 @@ header{
   margin-top: 2vw;
 }
 
+#map{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .restrictions-title b{
   font-family: BebasBold;
 }
@@ -646,7 +654,10 @@ header{
 }
 
 .reviews{
-  height: 70vw;
+    height: 70vw;
+    position: relative;
+    background-color: #000;
+    z-index: 2;
 }
 
 .center{
@@ -772,8 +783,27 @@ header{
   font-family: BebasBold;
 }
 
+.contact-us{
+    background: url("../sources/map_bg.jpg");
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+
 .contact-us .control{
   width: 50%;
+}
+
+.map-layout{
+    position: absolute;
+    z-index: -1;
+    top: -45%;
+    left: -30%;
+    height: 120%;
+    width: 100vw;
+    transform: rotate(80deg); /* Поворачиваем на 45º */
+    -webkit-transform: rotate(80deg);
+    background-color: rgba(100, 0, 0, .9);
 }
 
 .field-mobile .control{
@@ -851,6 +881,8 @@ header{
 
 .footer
 {
+    position: relative;
+    z-index: 2;
   background: linear-gradient(90deg, #4d0c0e, #111 60%);
 }
 
@@ -866,8 +898,20 @@ header{
   display: block;
 }
 
-@media screen and (max-width: 1023px){ /*TABLETS*/
+@media screen and (min-width: 1630px){
+    .map-layout{
+        top: -45%;
+        width: 95vw;
+    }
+}
 
+@media screen and (max-width: 1023px){ /*TABLETS*/
+    .map-layout{
+        width: 105vw;
+        top: -15%;
+        left: -35%;
+        height: 90%;
+    }
 
   .content-container{
     width: 80%;
