--- a/css/style.css
+++ b/css/style.css
@@ -690,9 +690,11 @@ header{
 .center .slick-center .reviews-carousel-item-review{
   color: #fff;
   font-size: 2vw;
+  width: 200%!important;
   display: block;
   margin: 0 auto;
   padding-top: 1vw;
+  margin-left: -10vw!important;
   text-align: center;
 }
 
@@ -1381,6 +1383,16 @@ header{
     border: none;
     border-bottom: 3px solid #333;
   }
+
+   .center .slick-center .reviews-carousel-item-review{
+       color: #fff;
+       font-size: 2vw;
+       width: 100%!important;
+       display: block;
+       margin: 0 auto;
+       padding-top: 1vw;
+       margin-left: 0!important;
+   }
 
   .field-mobile input:focus, .field-mobile textarea:focus{
     border: none;
