--- a/css/style.css
+++ b/css/style.css
@@ -1390,7 +1390,7 @@ header{
 
    .center .slick-center .reviews-carousel-item-review{
        color: #fff;
-       font-size: 2vw;
+       font-size: 2.5vw!important;
        width: 100%!important;
        display: block;
        margin: 0 auto;
